--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@ var margin = {top: 10, right: 30, bottom: 30, left: 60},
               "translate(" + margin.left + "," + margin.top + ")")
 
 //Read the data
-d3.csv("https://raw.githubusercontent.com/sowjanyabhupathiraju/sowjanya.github.io/master/covid-country.csv", function(data) {
+d3.csv("https://raw.githubusercontent.com/sowjanyabhupathiraju/sowjanya.github.io/master/statewise-vaccine-deathrate_v2.csv", function(data) {
 
   // Add X axis
-  var x = d3.scaleLinear()
-    .domain([0, 100])
+var x = d3.scaleLinear()
+    .domain([25, 80])
     .range([ 0, width ]);
-  svg.append("g")
+svg.append("g")
     .attr("class", "myXaxis")   // Note that here we give a class to the X axis, to be able to call it later and modify it
     .attr("transform", "translate(0," + height + ")")
     .call(d3.axisBottom(x))
@@ -43,10 +43,10 @@ svg.append("text")
     .text("% of population Fully Vaccinated");
 
   // Add Y axis
-  var y = d3.scaleLinear()
-    .domain([0, 10])
+var y = d3.scaleLinear()
+    .domain([0, 3])
     .range([ height, 0]);
-  svg.append("g")
+svg.append("g")
     .call(d3.axisLeft(y));
 svg.append("text")
     .attr("class", "y label")
@@ -77,6 +77,97 @@ text = svg.append('text').text('Size of circle indicates Total deaths')
                 .attr('x', 50)
                 .attr('y', 60)
                 .attr('fill', 'black')
+				
+var r = d3.scaleLinear()	
+    .domain([0, 80000])
+    .range([ 3	, 20]);
+  
+
+var colors = d3.scaleLinear()
+    .domain([0, 4])
+    .range(['yellow','red']);
+var tooltip = d3.select("#my_dataviz")
+    .append("div")
+    .style("opacity", 0)
+    .attr("class", "tooltip")
+    .style("background-color", "black")
+    .style("color", "white")
+    .style("border-radius", "5px")
+    .style("padding", "10px")
+
+// A function that change this tooltip when the user hover a point.
+  // Its opacity is set to 1: we can now see it. Plus it set the text and position of tooltip depending on the datapoint (d)
+  var mouseover = function(d) {
+    tooltip
+      .style("opacity", 1)
+  }
+
+  var mousemove = function(d) {
+    tooltip
+      .html("Country:" + d.Location + " Total Cases:" + d.Totalcases + " Total Deaths:" + d.TotalDeaths + " Mortality:" + d.Fatality_Rate + "% Vaccination rate:" +d.Fullyvaccinated_percent+"%")
+	  .style("left", (d3.mouse(this)[0]+90) + "px") // It is important to put the +90: other wise the tooltip is exactly where the point is an it creates a weird effect
+      .style("top", (d3.mouse(this)[1]) + "px")
+  }
+
+  // A function that change this tooltip when the leaves a point: just need to set opacity to 0 again
+  var mouseleave = function(d) {
+    tooltip
+      .transition()
+      .duration(200)
+      .style("opacity", 0)
+  }
+  
+  
+
+// Add dots
+svg.append('g')
+    .selectAll("dot")
+    .data(data)
+    .enter()
+    .append("circle")
+      .attr("cx", function (d) { return x(d.Fullyvaccinated_percent+25); } )
+      .attr("cy", function (d) { return y(d.Fatality_Rate); } )
+      .attr("r", function (d) { return r(d.TotalDeaths)})
+      .style('fill', function(d,i) {
+        return colors(d.Fatality_Rate);})
+		// Show tooltip on hover
+    .on("mouseover", mouseover )
+    .on("mousemove", mousemove )
+    .on("mouseleave", mouseleave )
+		
+	  
+
+
+
+
+  // new X axis
+x.domain([25, 80])
+ svg.select(".myXaxis")
+    .transition()
+    .duration(0)
+    .attr("opacity", "1")
+    .call(d3.axisBottom(x));
+	// new X axis
+y.domain([0, 3])
+svg.select(".myYaxis")
+    .transition()
+    .duration(0)
+    .attr("opacity", "1")
+    .call(d3.axisBottom(y));
+
+
+
+var circleLabels = svg.append("g").selectAll("text").data(data).enter().append("text");
+
+circleLabels
+      .attr("x", function(d) { return x(d.Fullyvaccinated_percent)-10; })
+      .attr("y", function(d) { return y(d.Fatality_Rate)-10; })
+      .text(function(d) { return d.Location; })
+      .attr("font-family", "sans-serif")
+      .attr("font-size", "8px")
+      .attr("fill", "black");
+
+
 
 });
 
