--- a/index.html
+++ b/index.html
@@ -184,6 +184,8 @@ circleLabels
 <br>
 </body>
 
-<button onclick="window.location.href='https://sowjanyabhupathiraju.github.io/vaccineimpactdeath/';">
-      Back
-    </button>
+<button onclick="window.location.href='https://sowjanyabhupathiraju.github.io/covidmortalityp3/';">
+	Next
+	</button>
+
+
