--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ d3.csv("https://raw.githubusercontent.com/sowjanyabhupathiraju/sowjanya.github.i
 
   // Add X axis
 var x = d3.scaleLinear()
-    .domain([35, 80])
+    .domain([25, 80])
     .range([ 0, width ]);
 svg.append("g")
     .attr("class", "myXaxis")   // Note that here we give a class to the X axis, to be able to call it later and modify it
@@ -38,13 +38,13 @@ svg.append("g")
 svg.append("text")
     .attr("class", "x label")
     .attr("text-anchor", "end")
-    .attr("x", width+35)
-    .attr("y", height)
+    .attr("x", width)
+    .attr("y", height+25)
     .text("% of population Fully Vaccinated");
 
   // Add Y axis
 var y = d3.scaleLinear()
-    .domain([0,700])
+    .domain([0, 3])
     .range([ height, 0]);
 svg.append("g")
     .call(d3.axisLeft(y));
@@ -54,7 +54,7 @@ svg.append("text")
     .attr("y", 6)
     .attr("dy", ".75em")
     .attr("transform", "rotate(-90)")
-    .text("Nos of deaths per 100K Population");
+    .text("Fatality %");
 	
 rect = svg.append('rect').transition().duration(500).attr('width', 250)
                 .attr('height', 70)
@@ -84,11 +84,11 @@ var r = d3.scaleLinear()
   
 
 var colors = d3.scaleLinear()
-    .domain([0, 3])
+    .domain([0, 4])
     .range(['yellow','red']);
 var tooltip = d3.select("#my_dataviz")
     .append("div")
-    .style("opacity", 10)
+    .style("opacity", 0)
     .attr("class", "tooltip")
     .style("background-color", "black")
     .style("color", "white")
@@ -104,7 +104,7 @@ var tooltip = d3.select("#my_dataviz")
 
   var mousemove = function(d) {
     tooltip
-      .html("Country:" + d.Location + " Total Cases:" + d.Totalcases + " Total Deaths:" + d.TotalDeaths + " Mortality:" + d.Fatality_Rate + " Deaths per 100K Population:" + d.Death_100K_Population +" Vaccination rate:" +d.Fullyvaccinated_percent+"%")
+      .html("Country:" + d.Location + " Total Cases:" + d.Totalcases + " Total Deaths:" + d.TotalDeaths + " Mortality:" + d.Fatality_Rate + "% Vaccination rate:" +d.Fullyvaccinated_percent+"%")
 	  .style("left", (d3.mouse(this)[0]+90) + "px") // It is important to put the +90: other wise the tooltip is exactly where the point is an it creates a weird effect
       .style("top", (d3.mouse(this)[1]) + "px")
   }
@@ -125,8 +125,8 @@ svg.append('g')
     .data(data)
     .enter()
     .append("circle")
-      .attr("cx", function (d) { return x(d.Fullyvaccinated_percent); } )
-      .attr("cy", function (d) { return y(d.Death_100K_Population); } )
+      .attr("cx", function (d) { return x(d.Fullyvaccinated_percent+25); } )
+      .attr("cy", function (d) { return y(d.Fatality_Rate); } )
       .attr("r", function (d) { return r(d.TotalDeaths)})
       .style('fill', function(d,i) {
         return colors(d.Fatality_Rate);})
@@ -141,14 +141,14 @@ svg.append('g')
 
 
   // new X axis
-x.domain([35, 80])
+x.domain([25, 80])
  svg.select(".myXaxis")
     .transition()
     .duration(0)
     .attr("opacity", "1")
     .call(d3.axisBottom(x));
 	// new X axis
-y.domain([0, 700])
+y.domain([0, 3])
 svg.select(".myYaxis")
     .transition()
     .duration(0)
@@ -160,8 +160,8 @@ svg.select(".myYaxis")
 var circleLabels = svg.append("g").selectAll("text").data(data).enter().append("text");
 
 circleLabels
-      .attr("x", function(d) { return x(d.Fullyvaccinated_percent); })
-      .attr("y", function(d) { return y(d.Death_100K_Population); })
+      .attr("x", function(d) { return x(d.Fullyvaccinated_percent)-25; })
+      .attr("y", function(d) { return y(d.Fatality_Rate)-14; })
       .text(function(d) { return d.Location; })
       .attr("font-family", "sans-serif")
       .attr("font-size", "9px")
@@ -179,13 +179,13 @@ circleLabels
 
 </script>
 <body>
-<b> The chart depicts the relationship between %of population fully vaccinated and number of deaths per 100K population per state.
+<b> The chart depicts the relationship between %of population fully vaccinated and Death rate as a % of COVID cases.
 <br> Unfortunately we are not able to find a clear pattern on the benefit of Vaccination. 
 <br>
 </body>
 
+
 <button onclick="window.location.href='https://sowjanyabhupathiraju.github.io/covidmortalityp3/';">
 	Next
 	</button>
-
 
